--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "@types/node": "^20.8.9",
     "@typescript-eslint/eslint-plugin": "6.9.1",
     "@typescript-eslint/parser": "6.9.1",
+    "@vitest/coverage-v8": "0.34.6",
     "eslint": "8.52.0",
     "prisma": "5.5.2",
     "tsup": "^7.2.0",
@@ -28,6 +31,8 @@
     "dotenv": "16.3.1",
     "fastify": "^4.24.3",
     "nvm": "0.0.4",
+    "vite-tsconfig-paths": "4.2.1",
+    "vitest": "0.34.6",
     "zod": "3.22.4"
   }
 }
