--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@prisma/client": "5.5.2",
     "@types/bcryptjs": "2.4.5",
     "bcryptjs": "2.4.3",
+    "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "fastify": "^4.24.3",
-    "nvm": "0.0.4",
     "vite-tsconfig-paths": "4.2.1",
     "vitest": "0.34.6",
     "zod": "3.22.4"
